
        This includes the basic functionality to login, add users & reset passwords
        it doesn't add any kind of restrictions, I want to improve the UI
        & other basic functionality before adding the above.

    Logo created by my buddy Josh
    Total storage available to fleet analytics

    View, create & delete proxy devices on a host (#165)

Changed
    Indicate cluster groups & standalone hosts on dashboard (#150)
    Load profile on click instead of passing around an array containing profile data
    Indicate cluster groups & standalone hosts on profiles
    Indicate cluster groups & standalone hosts on storage
    Indicate cluster groups & standalone hosts on networks
    Indicate cluster groups & standalone hosts on projects
    Clear modals on hidden (#164)

Fixed
    Cant create a container with no devices (#158)
    All clusters not showing on cluster overview (#151)
    Cant store backup locally because of missing class property (#164)
    Cant access files on new versions of LXD

0.6.1 - 02/03/2020

Fixed
    Cant add more than one GPU
    CoreUI bug preventing collapse's from working

0.6.0 - 01/02/2020

Added
    Store enviorment variable with cloud-config rev (#70)
    Backup & Restore Containers (#89)
    Browse, upload & delete container files (#132)
    Show if container is in deployment with link to deployment on container view
    Allow setting server alias when adding (#134)
    Support for VM's (#142)

Changed
    Show memory as graph instead of as table
    Dont show nav text on devices < 1500px
    Hide project group if host doesn't support projects
    Made some general improvements to the node script

Fixed
    Settings don't clear properly between containers (#143)

0.5.0

Fixed
    Container snapshot breaks loading deployments
    Providing a port breaks adding host (#113)

Changed
    UI tweaks including
        sidebar width
        Collapse server by default when there is > 10 containers (#114)